--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "bingo-server",
   "version": "1.0.0",
-  "description": "Bingo Server",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
-  "engines": {
-    "node": ">=18"
-  },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "uuid": "^9.0.0"
   }
 }
