--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "bingo-server",
+  "name": "bingo-hall",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
+    "express": "^4.18.2",
     "uuid": "^9.0.1"
   }
 }
